--- a/CBS_Project/.classpath
+++ b/CBS_Project/.classpath
@@ -4,9 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="C:/Users/Owner/Documents/My Stuff/Repos/Code4Good/google-gson-2.2.2/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Owner/Documents/My Stuff/Repos/Code4Good/google-gson-2.2.2/gson-2.2.2-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Owner/Documents/My Stuff/Repos/Code4Good/google-gson-2.2.2/gson-2.2.2-sources.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/Users/JWonz/Desktop/bk/Code4Good/google-gson-2.2.2/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/JWonz/Desktop/bk/Code4Good/google-gson-2.2.2/gson-2.2.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/JWonz/Desktop/bk/Code4Good/google-gson-2.2.2/gson-2.2.2-sources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
